# spiritual-oracle-backend

./: .gitignore  README.md  pyproject.toml
app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
app/routers/: __init__.py  oracle.py
scripts/: check_table_counts.py  load_gita_data.py  verify_db_counts.py
